# mongo_fuse_fs

./: '  .clang-format  .gitignore  CMakeLists.txt  README.md  build_all.sh  compile_commands.json  driver.output  install.sh  m_make_build.sh  make_build_all.sh  mongo_fuse_fs.files  mongo_fuse_fs.includes  mongo_fuse_fs.output  mongo_fuse_fs_rebuild.sh  mongo_fuse_fs_remake.sh  mount.sh  rebuild.sh  reformat.sh  remake.sh  restart_mongo.sh  run_all.sh  run_driver.sh  run_mongo_fs.sh  start_mongo.sh  stop_mongo.sh  test  umount.sh
.cache/clangd/index/: entry.cpp.3A5B226FDFB6A8AC.idx
driver/: CMakeLists.txt  remake.sh
driver/src/: entry.cpp
mongo_fs/: '  .gitignore  CMakeLists.txt  CMakeLists.txt.user.331d29a
mongo_fs/.cache/clangd/index/: connection.h.ABA6190B2220080C.idx  entry.cpp.401E4C6710D65E83.idx  fs_data_collection.cpp.FA835F1EA6CB696C.idx  fs_data_collection.h.F81807555BF660F0.idx  fs_helper.cpp.D4A477293902AC51.idx  fs_helper.h.E588E6859C03A419.idx  fs_lookup_collection.cpp.62DEF963168CA73D.idx  fs_lookup_collection.h.5B21AD9AC83FF7AA.idx  fs_metadata_collection.cpp.DF1C22FE56B0745A.idx  fs_metadata_collection.h.09C82B7E1229A784.idx  handler.cpp.C3F88F21588A6841.idx  handler.h.E4BD247EDE039A08.idx  manager.cpp.2E0F58DE78E6F4E5.idx  manager.h.623019E4DBE6214C.idx  perm.cpp.93A13E82FCE46925.idx  perm.h.B381DA33231D4E6A.idx  types.h.3CED3742CEA6DEB4.idx
mongo_fs/src/: entry.cpp
mongo_fs/src/fs/: fs_config.h  fs_helper.cpp  fs_helper.h  handler.cpp  handler.h  helper.cpp  helper.h  perm.cpp  perm.h
mongo_fs/src/mongo/: connection.h  fs_entry.cpp  fs_entry.h  fs_lookup.cpp  fs_lookup.h  manager.cpp  manager.h  md_entry.cpp  md_entry.h  mongo_manager.cpp  mongo_manager.h
mongo_fs/src/mongo/collection/: collection_helper.cpp  collection_helper.h  fs_data_collection.cpp  fs_data_collection.h  fs_dir_collection.cpp  fs_dir_collection.h  fs_lookup_collection.cpp  fs_lookup_collection.h  fs_metadata_collection.cpp  fs_metadata_collection.h  types.h
src/: entry.cpp
src/fs/: handler.cpp  handler.h  perm.cpp  perm.h
src/fs_handler/: fs_handler.cpp  fs_handler.h
src/mongo/: connection.h  fs_entry.cpp  fs_entry.h  manager.cpp  manager.h  md_entry.cpp  md_entry.h
src/mongo_manager/: mongo_manager.cpp  mongo_manager.h
